tests/baselines/reference/assignFromBooleanInterface2.errors.txt
==== tests/cases/compiler/assignFromBooleanInterface2.ts (2 errors) ====
    interface Boolean {
        doStuff(): string;
    }
    
    interface NotBoolean {
        doStuff(): string;
    }
    
    var x = true;
    var a: Boolean;
    var b: NotBoolean;
    
    a = x;
    a = b;
    
    b = a;
    b = x;
    
    x = a; // expected error
    ~
!!! assignFromBooleanInterface2.ts(19,1): error TS2011: Cannot convert 'Boolean' to 'boolean'.
    x = b; // expected error
    ~
!!! assignFromBooleanInterface2.ts(20,1): error TS2011: Cannot convert 'NotBoolean' to 'boolean'.
    
    